# makanaki_agent

./: .env.example  .gitignore  ADK_SNIPPETS.md  AGENTS.md  README.md  pyproject.toml
api/: meteoblue.md
api/meteoblue_client/: __init__.py  client.py  models.py
api/tests/: test_integration.py  test_meteoblue_client.py
weather_agent/: agent.py  shared.py
weather_agent/sub_agents/: location_agent.py
weather_agent/tools/: __init__.py  get_climate_image.py  get_forecast.py  search_location.py
